--- a/README.org
+++ b/README.org
@@ -29,7 +29,7 @@
   - [[#ensure][:ensure, :package keywords]]
   - [[:preface, :init, :config keywords]]
   - [[:defer-config keyword]]
-  - [[:commands, :commands* keyword]]
+  - [[:commands keyword]]
   - [[:after keyword]]
   - [[:bind, :bind* keywords]]
 - [[Configure variables keywords]]
@@ -529,7 +529,7 @@ S-expressions, but you can do so if you prefer it.
              (leaf-pre-init-after)))))))
 #+end_src
 
-** :commands, :commands* keyword
+** :commands keyword
 
 ~commands~ keyword configures ~autoload~ for its leaf-block name.
 
@@ -570,57 +570,6 @@ S-expressions, but you can do so if you prefer it.
          (autoload #'leaf-pairp "leaf" nil t)
          (autoload #'leaf-plist-get "leaf" nil t)
          (autoload #'leaf-insert-list-after "leaf" nil t)))))
-#+end_src
-
-~:commands~ keyword genrates ~autoload~ statement but no-interactive one.
-
-#+begin_src emacs-lisp
-  (cort-deftest-with-macroexpand leaf/commands*
-    '(
-      ;; specify a symbol to set to autoload function
-      ((leaf leaf
-         :commands* leaf
-         :config (leaf-init))
-       (prog1 'leaf
-         (unless (fboundp 'leaf) (autoload #'leaf "leaf"))
-         (eval-after-load 'leaf
-           '(progn
-              (leaf-init)))))
-
-      ;; multi symbols will be accepted
-      ((leaf leaf
-         :commands* leaf leaf-pairp leaf-plist-get)
-       (prog1 'leaf
-         (unless (fboundp 'leaf) (autoload #'leaf "leaf"))
-         (unless (fboundp 'leaf-pairp) (autoload #'leaf-pairp "leaf"))
-         (unless (fboundp 'leaf-plist-get) (autoload #'leaf-plist-get "leaf"))))
-
-      ;; multi symbols in list will be accepted
-      ((leaf leaf
-         :commands* (leaf leaf-pairp leaf-plist-get))
-       (prog1 'leaf
-         (unless (fboundp 'leaf) (autoload #'leaf "leaf"))
-         (unless (fboundp 'leaf-pairp) (autoload #'leaf-pairp "leaf"))
-         (unless (fboundp 'leaf-plist-get) (autoload #'leaf-plist-get "leaf"))))
-
-      ;; It is accepted even if you specify symbol and list at the same time
-      ((leaf leaf
-         :commands* leaf (leaf-pairp leaf-plist-get (leaf-insert-list-after)))
-       (prog1 'leaf
-         (unless (fboundp 'leaf) (autoload #'leaf "leaf"))
-         (unless (fboundp 'leaf-pairp) (autoload #'leaf-pairp "leaf"))
-         (unless (fboundp 'leaf-plist-get) (autoload #'leaf-plist-get "leaf"))
-         (unless (fboundp 'leaf-insert-list-after) (autoload #'leaf-insert-list-after "leaf"))))
-
-      ;; specify cdr value to define other package function
-      ((leaf leaf
-         :commands* (org-crypt-use-before-save-magic . org-crypt)
-         :config (leaf-init))
-       (prog1 'leaf
-         (unless (fboundp 'org-crypt-use-before-save-magic) (autoload #'org-crypt-use-before-save-magic "org-crypt"))
-         (eval-after-load 'leaf
-           '(progn
-              (leaf-init)))))))
 #+end_src
 
 ** :after keyword
