On :package, save already installed pkgs into selected-packages
Make sure the `:package`'s target packages are always saved into
the variable `packages-selected-packages`, whether or not
the packages are already installed. This way we can more easily
use package.el-related utilities like `package-autoremove`.

Fixes:
- https://github.com/conao3/leaf.el/issues/504
- https://github.com/conao3/leaf.el/issues/294

--- a/README.org
+++ b/README.org
@@ -414,11 +414,13 @@ Since ~:ensure~ is to use ~package.el~ by default, ~:ensure~ and
        (prog1 'macrostep
          (leaf-handler-package macrostep macrostep nil)))
 
-      ;; `leaf-handler-package' expandion example.
-      ;; If `macrostep' isn't installed, try to install.
-      ;; If fail install, update local cache and retry to install.
+      ;; `leaf-handler-package' expansion example.
+      ;; If `macrostep' is installed, set it as a selected package;
+      ;; otherwise try to install it.
+      ;; If installation fails, update local cache and retry to install.
       ((leaf-handler-package macrostep macrostep nil)
-       (unless (package-installed-p 'macrostep)
+       (if (package-installed-p 'macrostep)
+           (package--update-selected-packages '(macrostep) nil)
          (unless (assoc 'macrostep package-archive-contents)
            (package-refresh-contents))
          (condition-case err
